--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^2.5.2
   go_router: ^14.8.1
   firebase_auth: ^5.5.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
